--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ dependencies = [
     "aiosqlite>=0.22.1",
     "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
+    "fastapi-cache2>=0.2.2",
     "greenlet>=3.3.0",
     "httpx>=0.28.1",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
+    "redis>=7.1.0",
     "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
 ]
