--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,5 +9,10 @@ services:
       - "6432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:8-alpine
+    ports:
+      - "6379:6379"
 volumes:
   postgres_data:
